Finish Müller 402 + Müller 100 writers without date

--- a/data/raw/newalchemypress.com/05-muller-writers/README
+++ b/data/raw/newalchemypress.com/05-muller-writers/README
@@ -5,6 +5,7 @@ See https://tig12.github.io/gauquelin5/newalch-muller402.html for more details
 is a copy of
 https://newalchemypress.com/gauquelin/gauquelin_docs/5muller_writers.xlsx
 
+
 2 - 5muller_writers.csv
 is built from 5muller_writers.xlsx :
 
@@ -16,14 +17,9 @@ Select MuErtel402Italians(SolarFire)
 Save as csv (UTF8 separated by ;)
 => generates 5muller_writers.csv
 
-fields in 5muller_writers.csv :
-ID
-FNAME
-GNAME
-DATE
-TZ
-PLACE
-CY
-C2
-LG
-LAT
+
+3 - muller-100-it-writers.txt
+List of 100 italian witers without birth time
+Comes from Astro-Forschungs-Daten 1, Arno Müller, Waldmohr, 1991
+Scan by Nick Kollerstrom
+OCR and corrections by Thierry Graff
