Refactor CLI, adapt code and doc
CLI was previoulsy based on the notions of
dataset, datafile, action.
This doesn't fit anymore with the addition of db 'dataset'.
The vocabulary was then changed to argument1, 2, 3

--- a/src/commands/cura/all/README
+++ b/src/commands/cura/all/README
@@ -1,5 +1,5 @@
 Code operating on all cura files
 
 To add a new command available for all cura files :
-- Add the command in CuraRouter::getCommands()
+- Add the command in CuraRouter::getArgs3()
 - Handle the command in CuraCommand::execute()
