Add newalch muller402 raw2tmp100

--- a/data/raw/newalchemypress.com/05-muller-writers/README
+++ b/data/raw/newalchemypress.com/05-muller-writers/README
@@ -23,3 +23,4 @@ List of 100 italian witers without birth time
 Comes from Astro-Forschungs-Daten 1, Arno Müller, Waldmohr, 1991
 Scan by Nick Kollerstrom
 OCR and corrections by Thierry Graff
+Scans available at https://g5.tig12.net/auxiliary/1991-muller-writers/
