Continue Müller 234 women

--- a/data/raw/muller/afd3-women/README
+++ b/data/raw/muller/afd3-women/README
@@ -9,3 +9,20 @@ Scans can be dowloaded from https://g5.tig12.net/auxiliary/1993-muller-women/
 Mars - april 2021
 Scan of original document by Nick Kollerstrom
 Conversion to a text file and corrections by Thierry Graff
+
+Lists of modifications that may introduce errors:
+148 MARIA Sophie VON WITTELSBACH 
+148 MARIA, Sophie, VON WITTELSBACH 
+
+024 BERNADETTE (SOUBIROUS, Maria Bernarda)
+024 SOUBIROUS, Bernadette (Maria Bernarda)
+
+027 BLIXEN, Karen (BLIXEN-FINECKE Tania)
+027 BLIXEN-FINECKE, Karen BLIXEN, Tania
+
+155 MISTINGUETT (BOURGEOIS, Joanne-Marie)
+155 BOURGEOIS, Joanne-Marie (MISTINGUETT)
+
+046 COLETTE (Sidonie Gabrielle)
+046 SIDONIE, Gabrielle (Colette)
+
