--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 
+- extract 'source' from constant SOURCE_DEFINITION command classes, and put inside getSource()
+
+- Update Muller1083 documentation
 
 - Add schema in db config + in all sql queries, specify the schema
 
