Add command db fill source

--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 
+- Replace Source::getSource by a __construct($yamlfile)
+
 - extract 'source' from constant SOURCE_DEFINITION command classes, and put inside getSource()
 
 - Update Muller1083 documentation
