--- a/data/raw/cura.free.fr/README
+++ b/data/raw/cura.free.fr/README
@@ -1,3 +1,3 @@
 
-
-Copy of files coming from http://cura.free.fr/gauq/17archg.html
+Copy of files coming from
+https://web.archive.org/web/20200916073026/http://cura.free.fr/gauq/17archg.html
