--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@
 history        | [{"new": {"sex": "M", "name": {"given": "Salvatore", "family": "Quasimodo"}, "birth": {"tzo": "+01:00", "date": "1901-08-20 18:00", "note": "", "place": {"c2": "SR", "cy": "IT", "lg": "15", "lat": "37", "name": "Siracusa"}}, "occus": ["writer"], "trust": 4, "sources": "afd1", "ids_in_sources": {"afd": "M1-367", "afd1": "367"}}, "raw": {"LG": "-15,5", "DAY": "20", "LAT": "37", "MIN": "00", "TZO": "-1", "HOUR": "18", "NAME": "367M Quasimodo, Salvatore", "YEAR": "1901", "MONTH": "08", "PLACE": "Siracusa SR"}, "date": "2021-09-19T16:55:03+02:00", "source": "afd1", "command": "cura muller402 tmp2db"}]
 
 - quasimodo-salvatore-1901-08-20: Hour incoherent between M1-367 (18:00) and M2-457 (04:10)
+  BUG: AFD2 id not added in db
 
 - add field notes in Person (useful for D10, fields corrected in APP)
   (also useful in E1 E3)
