Add Gauquelin 1955 priests raw list

--- a/data/raw/gauquelin1955/README
+++ b/data/raw/gauquelin1955/README
@@ -1,7 +1,10 @@
 
+Contains lists published in "L'influence des astres, étude critique et expérimentale", by Michel Gauquelin, 1955, Editions du Dauphin.
+These lists were not published in Gauquelin LERRCP booklets.
+
+These lists were built from scans of the paper book.
+These scans can be downloaded from
+https://github.com/tig12/g5-aux/tree/master/1955-gauquelin
+
 g55-minor-painters.txt
 ----------------------------
-Contains a list published in "L'influence des astres, étude critique et expérimentale", by Michel Gauquelin, 1955, Editions du Dauphin.
-File g55-minor-painters.txt was built from scans of the original document.
-These scans can be downloaded from
-https://github.com/tig12/g5-aux/tree/master/1955-gauquelin/g55-peintres-mineurs
