--- a/data/raw/muller/afd2-men/README
+++ b/data/raw/muller/afd2-men/README
@@ -4,6 +4,7 @@ File muller-afd2-men.txt contains a list published in
 by Arno Müller
 
 File muller-afd2-men.txt was built from scans of the original document.
-These scans can be dowloaded from https://github.com/tig12/g5-aux/tree/master/1992-muller-men
+These scans can be downloaded from
+https://github.com/tig12/g5-aux/tree/master/1992-muller-men
 
 Build process : see https://github.com/tig12/g5-aux/blob/master/1992-muller-men/README
