--- a/data/raw/muller/afd3-women/README
+++ b/data/raw/muller/afd3-women/README
@@ -4,10 +4,10 @@ File muller-afd3-women.txt contains a list published in
 by A Müller and E Lührs
 
 File muller-afd3-women.txt was built from scans of the original document.
-These scans can be dowloaded from https://github.com/tig12/g5-aux/tree/master/1993-muller-women
+These scans can be downloaded from
+https://github.com/tig12/g5-aux/tree/master/1993-muller-women
 
 Build process : see https://github.com/tig12/g5-aux/blob/master/1993-muller-women/README
-
 
 Lists of manual modifications introduced in muller-afd3-women.txt
 and not present in the original document:
