Refactor data/raw - harmonize with data/tmp and auxiliary data repository

--- a/data/raw/muller/2-men/README
+++ b/data/raw/muller/2-men/README
@@ -5,6 +5,8 @@ by Arno Müller
 
 File muller-afd2-men.txt was built from scans of the original document.
 These scans can be downloaded from
-https://github.com/tig12/g5-aux/tree/master/1992-muller-men
+https://github.com/tig12/g5-aux/tree/master/1992-muller2-men
 
-Build process : see https://github.com/tig12/g5-aux/blob/master/1992-muller-men/README
+See also 
+    https://tig12.github.io/gauquelin5/muller2-612-writers.html
+    https://newalchemypress.com/gauquelin/research5.php
