--- a/data/raw/muller/5-medics/README
+++ b/data/raw/muller/5-medics/README
@@ -1,6 +1,14 @@
 
-5a_muller-medics-utf8.txt is an UTF-8 version of
+5a_muller-medics-utf8.txt is an UTF-8 version of file 5a_muller_medics.txt
+
+File 5a_muller_medics.txt originally comes from
 https://newalchemypress.com/gauquelin/gauquelin_docs/5a_muller_medics.txt
+Another copy of this file can be found at
+https://github.com/tig12/g5-aux/tree/master/1994-muller5-medics
+
+See also 
+    https://tig12.github.io/gauquelin5/muller5-1083-medics.html
+    https://newalchemypress.com/gauquelin/research5.php
 
 Conversion steps :
 
