--- a/data/raw/gauq/lerrcp/a6occu/README
+++ b/data/raw/gauq/lerrcp/a6occu/README
@@ -1,5 +1,9 @@
+
+
 These files were retrieved in 2019 from page
+
 https://newalchemypress.com/gauquelin/research8.php
+
 "Re-evaluating the Gauquelin Data" - 8. Poets and the Moon
 
 URL of the files were
@@ -7,3 +11,9 @@ https://newalchemypress.com/gauquelin/gauquelin_docs/poetse.dat
 https://newalchemypress.com/gauquelin/gauquelin_docs/novelists.dat
 
 These files are used affect a more precise occupation to records of Gauquelin A6 file.
+
+g5 integration
+------------------------------
+
+php run-g5.php gauq A6 occupn
+
