--- a/TODO
+++ b/TODO
@@ -2,6 +2,9 @@
 
 - see php bug - https://bugs.php.net/bug.php?id=81002
 
+- remove useless fields from table source:
+  replace title, isbn etc by 'details', kv map depending on source type.
+
 - integrate muller 1083 fix cura days and names to db/init/all
 
 - see db/fill/person
