--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@
 - see php bug - https://bugs.php.net/bug.php?id=81002
   (to store booleans in postgres)
 
+- Harmonize group creation => in data/db/group and remove from the code (class M5medics::getGroup() etc.)
+  
 - In all classes using TRUST_LEVEL, use the constants of class Trust
   
 - Clarify sources : maybe remove Gauquelin and Muller as sources
