--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-
 Gauquelin5 or g5
 
 Gathers timed birth dates of famous persons and merges them in a single database.
@@ -11,13 +10,13 @@ Next steps: link data to birth certificates, merge wikidata, compute eminence.
 For details, visit https://tig12.github.io/gauquelin5
 or clone the repository on your local machine and browse docs/index.html
 
-You also can directly download generated data: https://g5.tig12.net/output
+You can also download generated data: https://g5.tig12.net/output
 
 Needs php 8.0 or higher ; tested on linux (ubuntu 18.4 and debian 10 buster).
 
 Software at alpha stage. Structured enough to be usable but full of things to complete or refactor.
 
-Licence, for code and doc : choose between
+Licence, for code and doc: choose between
     - GPL, General Public Licence: https://www.gnu.org/licenses/gpl.html
     - FDL, Free Documentation Licence: https://www.gnu.org/licenses/fdl.html
     - CC-BY-SA-4, Creative Commons: href="http://creativecommons.org/licenses/by-sa/4.0/
