Prepare CFEPP tmp2db + doc

--- a/data/db/init/README
+++ b/data/db/init/README
@@ -3,4 +3,4 @@ This diretory contains data used by initial building of the database.
 
 Format of tweak files is different from data/db/tweaks: 
 Correspond to early stages of development.
-Modifies tmp files, not database.
+Used to modify tmp files, not database.
