Start g55 tmp2db, prepare groups priests and minor painters

--- a/data/raw/gauq/g55/README
+++ b/data/raw/gauq/g55/README
@@ -6,3 +6,5 @@ These lists were built from scans of the paper book.
 These scans can be downloaded from
 https://github.com/tig12/g5-aux/tree/master/1955-gauquelin
 
+Scan and OCR by Thierry Graff
+
