Corrections on g55 OCR

--- a/data/raw/gauq/g55/README
+++ b/data/raw/gauq/g55/README
@@ -1,10 +1,12 @@
 
 Contains lists published in "L'influence des astres, étude critique et expérimentale", by Michel Gauquelin, 1955, Editions du Dauphin.
-These lists were not published in Gauquelin LERRCP booklets.
+
 
 These lists were built from scans of the paper book.
 These scans can be downloaded from
 https://github.com/tig12/g5-aux/tree/master/1955-gauquelin
 
 Scan and OCR by Thierry Graff
+
+2022-06-26, Thierry Graff: Start OCR of 576 physicians and 508 physicians
 
