--- a/src/commands/gauq/look/README
+++ b/src/commands/gauq/look/README
@@ -1,3 +1,3 @@
 
 This directory contains code providing information about all cura files.
-Not part of any data processing
+Informative only, not part of any data processing.
